test/fixtures/diagnostics/type-checker/negative/enum-declaration-mismatch/input.tysh
namespace Samples.TypeChecker.EnumDeclarationMismatch

enum Color {
  Red
}

enum Size {
  Small
}

fun wrongEnum(): Color =
  Size.Small

fun missingMember(): Color =
  Color.Blue
